package jobs4u.base.applicationmanagement.domain;

import eapli.framework.domain.model.ValueObject;

public enum ApplicationStatus implements ValueObject {
    NOT_CHECKED, ACCEPTED, REJECTED
}
