package jobs4u.base.jobopeningmanagement.dto;

public class ContractTypeDTO {
}
